# J-HARD-TTS-Eval

./: .gitignore  README.md  asr.py  cer.py  config.yaml  ecapa_tdnn.py  pyproject.toml  spk_sim.py
corpora/: continuation.txt  repetition.txt  rhyme.txt  short.txt
result/continuation/: asr.jsonl  cer.txt
result/repetition/: asr.jsonl  cer.txt
result/rhyme/: asr.jsonl  cer.txt  spk_sim.txt
result/short/: asr.jsonl  cer.txt
